crates/compiler/tests/parse_errors/alias_problem.elm
module Main exposing (..)
type alias X = @
